Fix spacing

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -14,6 +14,7 @@ footer {
 }
 
 .cb-footer-container {
+  max-width: 780px;
   padding-top: 40px;
   padding-bottom: 60px;
 }
